<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frame_add_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMenu">

    <LinearLayout
        android:id="@+id/linear_add_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_margin="10dp"

        app:layout_constraintTop_toTopOf="parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:id="@+id/img_add_title"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_add_circle_black_24dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"


                />

            <TextView
                android:id="@+id/tv_add_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"


                android:text="@string/add_menu"
                android:textColor="@color/colorBlack"

                app:layout_constraintLeft_toRightOf="@id/img_add_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <Button
                android:id="@+id/btn_menu_delete"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/delete"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_add_menu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@id/linear_add_menu"
        android:layout_margin="20dp"
        android:gravity="left"
        >

        <TextView
            android:id="@+id/tv_add_large_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_1"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spr_add1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            />


        <TextView
            android:id="@+id/tv_add_subdivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_2"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spr_add2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            />

        <TextView
            android:id="@+id/tv_add_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_title"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            />

        <EditText
            android:id="@+id/et_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/edittext_cursor"

            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            />

        <TextView
            android:id="@+id/tv_add_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_link"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            />

        <EditText
            android:id="@+id/et_add_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/edittext_cursor"

            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_btn_add_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"


        >

        <Button
            android:id="@+id/btn_add_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/negative"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/btn_add_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/positive"
            android:layout_margin="5dp"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>