<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAdjust">

    <LinearLayout
        android:id="@+id/linear_adjust_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintTop_toTopOf="parent"

        android:layout_margin="10dp"

        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/tab_image_menu"

            />

        <TextView
            android:id="@+id/tv_menu_adjust_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_adjust"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>




    <FrameLayout
        android:id="@+id/frame_adjust_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        app:layout_constraintBottom_toTopOf="@+id/linear_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_adjust_title"

        android:layout_margin="20dp"

        >


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_adjust"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />



    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"

        >

        <Button
            android:id="@+id/btn_adjust_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/negative"
            />

        <Button
            android:id="@+id/btn_adjust_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/positive"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>