<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/frame_fragment2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:id="@+id/tv_fragment2_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainScreen"
                android:textSize="15dp"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:id="@+id/tv_right1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                />

            <TextView
                android:id="@+id/tv_path_list1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:id="@+id/tv_right2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                />

            <TextView
                android:id="@+id/tv_path_list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/colorBlack"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/et_frg2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"

                    android:layout_marginRight="10dp"

                    android:background="@drawable/edittext_custom1"
                    android:hint="@string/search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"


                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"

                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"

                    android:textCursorDrawable="@drawable/edittext_cursor"

                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            >

            <Button
                android:id="@+id/btn_frg2_late"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/late"
                android:background="@drawable/button_custom_only_line"
                android:layout_margin="5dp"

                />

            <Button
                android:id="@+id/btn_frg2_long"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/old"
                android:background="@drawable/button_custom_only_line"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn_init"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/restore"
                android:background="@drawable/button_custom_only_line"
                android:layout_margin="5dp"
                />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_frg2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_frg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_playlist_add_black_24dp"
        app:borderWidth="0dp"
        />

</FrameLayout>