<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:id="@+id/card_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            >

            <TextView
                android:id="@+id/tv_card_bigmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="대분류"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" > "
                />

            <TextView
                android:id="@+id/tv_card_smallmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="상세분류"
                />

            <Button
                android:id="@+id/btn_card_adjust"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/edit"
                android:background="@drawable/button_custom2"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>



        <TextView
            android:id="@+id/tv_card_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="가맹점 이름"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_linear"
            android:layout_margin="5dp"

            android:textColor="@color/colorBlack"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/tv_card_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2020-08-09"
            android:layout_margin="5dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_card_store"

            />


        <Button
            android:id="@+id/btn_card_choice"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/choice"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_card_store"
            android:layout_margin="5dp"

            android:background="@drawable/button_custom2"

            />

        <Button
            android:id="@+id/btn_card_link"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/link"

            android:background="@drawable/button_custom2"

            app:layout_constraintRight_toLeftOf="@id/btn_card_choice"
            app:layout_constraintTop_toTopOf="@id/tv_card_store"
            android:layout_margin="5dp"

            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>